# IQM

./: .gitmodules  CMakeLists.txt  README.md  compile_shaders.sh
benchamrks/: benchmark.sh
include/IQM/: flip.h  fsim.h  lpips.h  psnr.h  ssim.h  svd.h
include/IQM/base/: colorize.h  img_params.h  vulkan_image.h  vulkan_runtime.h
include/IQM/flip/: color_pipeline.h
include/IQM/fsim/: angular_filter.h  estimate_energy.h  fft_planner.h  filter_combinations.h  final_multiply.h  log_gabor.h  lowpass_filter.h  noise_power.h  partitions.h  phase_congruency.h  sum_filter_responses.h
shaders/: fsim_sort.glsl  svd_decompoose.glsl
shaders/base/: colorize.glsl
shaders/flip/: combine_error_maps.glsl  feature_detection.glsl  feature_filter_horizontal.glsl  spatial_detection.glsl  spatial_prefilter.glsl  spatial_prefilter_horizontal.glsl  srgb_to_ycxcz.glsl
shaders/fsim/: fsim_angular.glsl  fsim_downsample.glsl  fsim_filter_combinations.glsl  fsim_filter_noise.glsl  fsim_final_sum.glsl  fsim_gradientmap.glsl  fsim_log_gabor.glsl  fsim_mult_filters.glsl  fsim_noise_energy_sum.glsl  fsim_noise_power.glsl  fsim_pack_for_median.glsl  fsim_phase_congruency.glsl  fsim_shared.glsl  fsim_sum_filter_responses.glsl
shaders/lib/: multi_radixsort.glsl  multi_radixsort_histograms.glsl
shaders/lpips/: compare_relu.glsl  conv.glsl  conv_big.glsl  maxpool.glsl  postprocess.glsl  preprocess.glsl  reconstruct.glsl  sum.glsl
shaders/psnr/: pack.glsl  postprocess.glsl
shaders/ssim/: ssim.glsl  ssim_gauss.glsl  ssim_gauss_horizontal.glsl  ssim_gaussinput.glsl  ssim_lumapack.glsl  ssim_shared.glsl
shaders/svd/: compute.glsl  convert.glsl  msvd_sum.glsl
src/: CMakeLists.txt  main.cpp  profile.cpp  timestamps.h
src/base/: CMakeLists.txt  colorize.cpp  vulkan_runtime.cpp
src/flip/: CMakeLists.txt  flip.cpp  flip_color_pipeline.cpp
src/fsim/: CMakeLists.txt  fsim.cpp
src/fsim/steps/: angular_filter.cpp  estimate_energy.cpp  filter_combinations.cpp  final_multiply.cpp  log_gabor.cpp  lowpass_filter.cpp  noise_power.cpp  phase_congruency.cpp  sum_filter_responses.cpp
src/gpu/base/: CMakeLists.txt  vulkan_runtime.cpp  vulkan_runtime.h
src/gpu/flip/: CMakeLists.txt  flip.cpp  flip.h  flip_color_pipeline.cpp  flip_color_pipeline.h
src/gpu/fsim/: CMakeLists.txt  fft_planner.h  fsim.cpp  fsim.h
src/gpu/fsim/steps/: angular_filter.cpp  estimate_energy.cpp  filter_combinations.cpp  final_multiply.cpp  fsim_angular_filter.cpp  fsim_angular_filter.h  fsim_estimate_energy.cpp  fsim_estimate_energy.h  fsim_filter_combinations.cpp  fsim_filter_combinations.h  fsim_final_multiply.cpp  fsim_final_multiply.h  fsim_log_gabor.cpp  fsim_log_gabor.h  fsim_lowpass_filter.cpp  fsim_lowpass_filter.h  fsim_noise_power.cpp  fsim_noise_power.h  fsim_phase_congruency.cpp  fsim_phase_congruency.h  fsim_sum_filter_responses.cpp  fsim_sum_filter_responses.h  log_gabor.cpp  lowpass_filter.cpp  noise_power.cpp  phase_congruency.cpp  sum_filter_responses.cpp
src/gpu/ssim/: CMakeLists.txt  ssim.cpp  ssim.h
src/gpu/svd/: CMakeLists.txt  svd.cpp  svd.h
src/lpips/: CMakeLists.txt  lpips.cpp
src/psnr/: CMakeLists.txt  psnr.cpp
src/ssim/: CMakeLists.txt  ssim.cpp
src/svd/: CMakeLists.txt  svd.cpp
